# multimodel_emotion_recognition

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  tiny.json
data/: example_manifest.jsonl
scripts/: build_synthetic_dataset.py  create_group_splits.py  evaluate.py  export_onnx.py  extract_audio_features.py  extract_video_features.py  predict.py  run_demo.py  train.py  validate_manifest.py
src/multimodal_emotion/: __init__.py  config.py
src/multimodal_emotion/data/: __init__.py  dataset.py  manifest.py  splits.py  synthetic.py
src/multimodal_emotion/demo/: __init__.py  fusion.py  service.py  ui.py
src/multimodal_emotion/evaluation/: __init__.py  metrics.py
src/multimodal_emotion/export/: __init__.py  onnx_export.py
src/multimodal_emotion/inference/: __init__.py  predictor.py
src/multimodal_emotion/models/: __init__.py  fusion.py
src/multimodal_emotion/training/: engine.py  runtime.py
tests/: test_demo_fusion.py  test_manifest.py  test_metrics.py
